--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ h2:hover {
     word-wrap: break-word;
     overflow-wrap: break-word;
     text-decoration: none;
-    min-height: 100vh; 
+    min-height: fit-content; 
 }
 
 .section {
